<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity"
    android:background="@color/colorDark">

    <!-- Guideline -->
    <android.support.constraint.Guideline
        android:id="@+id/footer_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="86dp"
        app:layout_constraintGuide_percent="@dimen/footer_height_percent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/footer_bottom_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textAlarmDoorState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:maxLines="2"
            android:minLines="2"
            android:text="@string/settings_text_to_configure_telephone_number"
            android:textAlignment="center"
            android:textColor="@color/colorLight"
            android:textSize="@dimen/title_1_size"
            app:layout_constraintBottom_toTopOf="@+id/editTelephoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTelephoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:contentDescription="@string/settings_telephone_number_input_description"
            android:ems="10"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="@color/colorLight"
            android:textSize="@dimen/title_1_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/openSettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:onClick="saveSettingsAndGoToMainPage"
            android:text="@string/validate_settings_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@drawable/roundedbutton"
            android:paddingHorizontal="@dimen/button_padding_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTelephoneNumber" />



    </android.support.constraint.ConstraintLayout>



    <android.support.constraint.ConstraintLayout
        android:id="@+id/footerLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/footer_bottom_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageOnepointLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:contentDescription="@string/onepoint_logo_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_onepoint_black_logo" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>